--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 #template {
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -14,7 +16,6 @@
 }
 
 
-
 .box2 {
     background: #eee;
     grid-column:1;
@@ -22,7 +23,6 @@
 
     
 }
-
 
 /* opt */
 .box3 {
@@ -36,6 +36,9 @@
     background: #eee;
     grid-row:1/7;
     grid-column:2;
+    display : grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 2em;
     
 }
 
@@ -44,4 +47,40 @@
     /* 4 ==>> 위에 길이 조정 14==>밑에 길이 조정 */
     grid-row:7/10;  
     
+}
+
+.box4 > div {
+    border: 2px;
+}
+
+
+
+
+
+
+   
+.orderList1{
+
+  
+
+}
+
+
+
+.orderList2{
+
+
+}
+
+.orderList3 {
+
+
+}
+
+.orderList4 {
+    grid-column:1;
+    grid-row:2/2;
+
+
+
 }
