--- a/style.css
+++ b/style.css
@@ -1,3 +1,110 @@
+#template {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-gap: 1em;
+    
+}
+
+
+.box1 {
+    background: #eee;
+    grid-column:1;
+    grid-row:1/7;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 10% 90%;
+}
+
+
+
+.box2 {
+    background: #eee;
+    grid-column:1;
+    grid-row:7/10;
+
+    
+}
+
+
+/* opt */
+.box3 {
+    /* display: none; */
+    background: #eee;
+}
+
+    
+
+.box4 {
+    background: #eee;
+    grid-row:1/7;
+    grid-column:2;
+    
+}
+
+.box5 {
+    background: #eee;
+    /* 4 ==>> 위에 길이 조정 14==>밑에 길이 조정 */
+    grid-row:7/10;  
+    
+}
+
+.bev{
+    grid-area:2/1/3/2;
+}
+.food{
+    grid-area:2/2/3/3;
+}
+.Dessert{
+    grid-area:2/3/3/4;
+}
+.menuHover{
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+}
+.menuHover:hover{
+    transform: scale(1.2) 5s;
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+}
+
+.foodImg{
+    width: 150px;
+    height: 150px;
+    position: relative;
+}
+
+.menuName{
+    font-display: 나눔고딕;
+    font-size:20px;
+    color:black;
+    position: relative;
+    top: -40px;
+    text-align:center;
+} 
+
+.menuPrice{
+    font-size:18px;
+    position: relative;
+    top: -50px;
+    left: +50px;
+}
+
+.menuTitle{
+    position: static;
+    top: -50%;
+    left: +50%;
+    font-size:30px;
+}
+
+ul{
+    list-style: none;
+}
+
 
 
 #template {
@@ -83,3 +190,7 @@
     padding-left: 25px;
 }
 
+
+.orderMain {
+    padding-top: 21px;
+}
