--- a/style.css
+++ b/style.css
@@ -1,196 +1,403 @@
-#template {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-gap: 1em;
-    
-}
 
+/*.전체바디  */
 
-.box1 {
-    background: #eee;
-    grid-column:1;
-    grid-row:1/7;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 10% 90%;
-}
-
-
-
-.box2 {
-    background: #eee;
-    grid-column:1;
-    grid-row:7/10;
-
-    
-}
-
-
-/* opt */
-.box3 {
-    /* display: none; */
-    background: #eee;
-}
-
-    
-
-.box4 {
-    background: #eee;
-    grid-row:1/7;
-    grid-column:2;
-    
-}
-
-.box5 {
-    background: #eee;
-    /* 4 ==>> 위에 길이 조정 14==>밑에 길이 조정 */
-    grid-row:7/10;  
-    
-}
-
-.bev{
-    grid-area:2/1/3/2;
-}
-.food{
-    grid-area:2/2/3/3;
-}
-.Dessert{
-    grid-area:2/3/3/4;
-}
-.menuHover{
-    transform: scale(1);
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-}
-.menuHover:hover{
-    transform: scale(1.2) 5s;
-    -webkit-transform: scale(1.2);
-    -moz-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    -o-transform: scale(1.2);
-}
-
-.foodImg{
-    width: 150px;
-    height: 150px;
-    position: relative;
-}
-
-.menuName{
-    font-display: 나눔고딕;
-    font-size:20px;
-    color:black;
-    position: relative;
-    top: -40px;
-    text-align:center;
-} 
-
-.menuPrice{
-    font-size:18px;
-    position: relative;
-    top: -50px;
-    left: +50px;
-}
-
-.menuTitle{
-    position: static;
-    top: -50%;
-    left: +50%;
-    font-size:30px;
-}
-
-ul{
-    list-style: none;
-}
-
-
+  
 
 #template {
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-gap: 1em;
-    
+  
 }
 
-
+/* 1.메뉴 칸 */
 .box1 {
-    background: #eee;
     grid-column:1;
     grid-row:1/7;
-    
+    border: 4px dashed #009432;
 }
 
+/* 2.setMenu 칸*/
 
 .box2 {
-    background: #eee;
-    grid-column:1;
-    grid-row:7/10;
-
+    border: 4px dashed #4727fc;
+    text-align: center;
     
+    grid-column:1;
+    grid-row:7/10; 
 }
 
-/* opt */
+
+
+/* 3. 옵션칸 */
+
+
 .box3 {
     /* display: none; */
     background: #eee;
 }
 
-    
+
+
+
+/* 4.Price 전체  칸  */
+
+/* price 칸안에 화면에 보여지는 text 와  사용자로부터 받을 text CSS가 존재한다. */
 
 .box4 {
-    background: #eee;
+    border: 4px dashed rgb(255, 165, 2);
+        
     grid-row:1/7;
-    grid-column:2;
+
+    grid-template-columns: 2fr 1fr 1fr;   
+
+    grid-gap: 1em;
+    font-family: 'Gugi', cursive;
+    overflow-y: auto; 
+    
+  /* 스크롤 기능을 추가하기 위한 준비  */
+  /*  grid 먹이고 overflow-y 로 세팅 */
     display : grid;
-    grid-template-columns: 200px 2fr 2fr;
+    overflow-y: auto;
 
-    grid-gap: 2em;
+}
+
+
+/* 화면에 보여지는 text */
+
+
+/* 주문내역 */
+#orderList1 {
+    font-size: 12;
+  
+    /*  스크롤 기능  */
+    overflow-y: scroll; 
+    
+    
+}
+/* 수량 */
+#orderList2 {
+      /*  스크롤 기능  */
+    overflow-y: scroll;
+  
+}
+
+/* 가격 */
+
+#orderList3 {
+      /*  스크롤 기능  */
+    overflow-y: scroll;
     
 }
 
-.box5 {
-    background: #eee;
-    /* 4 ==>> 위에 길이 조정 14==>밑에 길이 조정 */
-    grid-row:7/10;  
+/* 총가격 */
+#orderList4 {
+   
+}
+
+
+/* 버튼 */
+.xBtn {
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffc477), color-stop(1, #fb9e25));
+    cursor: pointer;
+    font-family: Arial;
+    font-weight: bold;
+    padding: 20px 24px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #cc9f52;
+    font-size: 30px;
+    padding-left: 26px;
+
+
+}
+
+/* 화면에 보여지는 총가격 text Css */
+.textTotal {
+    padding-left: 32px;
+}
+
+/* 화면에 보여지는 총가격 Number */
+.totalPrice {
+    padding-left: 21px;
+    margin: 9px;
+
+}
+/* /각각 화면에 보여지는 주문내역 수량 가격의 클래스는 priceStyle / */
+.priceStyle {
+    height: 321px;
+    max-height: 400px;
+    overflow: hidden;
     
 }
 
-/* display 의 속성값이 flex 면 block 의 요소를 해제 할수 있다.  */
-.orderList4 {
-    
-    display: flex; 
-    grid-column: 1;
-    padding-left: 64px;
-    }
 
+/* 버튼을 클릭후 나오는  text */
+
+
+/* 1.price 사용자로부터 주문내역 수량 가격 총가격 CSS*/
+
+.orderMain {
+    color:  rgb(255, 165, 2);
+    padding-top: 20px;
+}
+
+/* 2.price-수량-Text-input  */
 
 .orderCount {
     
-    padding:20px;
-    padding-left: 14px;
-  
+    color:  rgb(255, 165, 2);
+    padding-top: 20px;
 }
 
+/* 3.price-가격-Text-input */
 
 .orderPrice {
-    
-    
-    padding:20px;
-    padding-left: 0;
+    color:  rgb(255, 165, 2);
+    padding-top: 20px;
    
-  
-
 }
 
+/* 4.price-총가격-Text-input */
 
 .totalPrice{
-
-    padding-left: 25px;
+    color:  rgb(255, 165, 2);
+   
 }
 
 
-.orderMain {
-    padding-top: 21px;
+/* 5. Price-총가격-Text-input  */
+.orderList4 {
+    
+    
+}
+
+
+
+
+
+
+
+
+/* 5. 계산기 칸  */
+.box5 {
+    border: 4px dashed #e84118;
+    /* 4 ==>> 위에 길이 조정 14==>밑에 길이 조정 */
+    grid-row:7/10;    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.setName {
+    display: inline-block; vertical-align: middle;
+    color: rgb(60, 0, 170);
+    font-weight: 1000;
+}
+
+
+
+
+
+
+
+.xBtn {
+
+    grid-column: 1;
+    
+
+}
+
+
+
+
+
+.priceStyle {
+
+    background: #eee;
+}
+
+
+
+
+
+
+/* 계산기 */
+
+
+.calBtnCash,
+.calBtnCard {
+    border: 0;
+    outline: 0;
+    font-family: 'Gugi', cursive;    
+    cursor: pointer;
+    position: relative;
+    top: auto;
+    left: 0%;
+    right: 5%;
+    text-align: center;
+    width: 50%;
+    /* height: 50px; */
+    padding: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    margin-right:-4px;
+    background-color: rgb(255, 255, 255);
+    transition: 0.5s ease;
+}
+
+.calBtnCash:hover,
+.calBtnCard:hover {
+    background-color: rgb(255, 64, 64);
+    font-family: 'Gugi', cursive;    
+    color: #f5f6fa;
+    height: 50px;
+
+}
+
+/* cash */
+
+.cash {
+    display: none;
+}
+
+
+
+/* Cash 눌렀을 때 */
+.cashClicked {
+    background: #eee;
+    display: block;
+    position:absolute;
+    left: 10%;
+    top: 10%;
+    width:340px;
+    height: 100px;
+}
+
+/* Cash 눌렀을 때 나오는 창들 */
+.cashContainer {
+    border: dotted;
+    height: 400px;
+    width: 600px;
+    background-color: #dfe6e9;
+    padding: 3px;
+
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 25% 25% 25% 25%;
+
+}
+.cashCal{
+    border: solid;
+    margin: 1px;
+    grid-column : 1/3;
+    grid-row: 1/6;
+
+}
+
+.cashInput2{
+    border: solid;
+    margin: 1px;
+    grid-column: 3/5;
+    grid-row: 1/2;
+ 
+}
+.cashChange{
+    border: solid;
+    margin: 1px;
+    grid-column: 3/5;
+    grid-row: 2/3;
+
+}
+
+.cashReceipt {
+    border: solid;
+    margin: 1px;
+    grid-column: 3/4;
+    grid-row: 3/5;
+
+}
+
+.cashPayment {
+    border: solid;
+    margin: 1px;
+    grid-column: 4/5;
+    grid-row: 3/5;
+
+
+}
+
+#inputPrice {
+    text-align: center;
+    font-size: 25px;
+    position: relative;
+    top: 30%;
+}
+
+#inputChange {
+    text-align: center;
+    font-size: 25px;
+    position: relative;
+    top: 30%;
+}
+
+
+
+/* 버튼들 */
+
+#receiptBtn {
+    width: 80%;
+    height: 80%;
+    position: relative;
+    top: 10%;
+    left: 10%;
+    
+}
+
+#paymentBtn {
+    width: 80%;
+    height: 80%;
+    position: relative;
+    top: 10%;
+    left: 10%;
+}
+
+.off {
+    visibility: hidden;
+}
+
+
+/* Card */
+.card {
+    display: none;   
+}
+
+/* Card 눌렀을 때 */
+.cardClicked {
+    display: block;
+    position:absolute;
+    left:15%;
+    top: 30%;
+
+    
+}
+
+.cardName {
+    border-style: dotted;
+    background-color: #bdc3c7;   
+    color: red;  
+    text-align: center;
+    font-size: 100px;
+    width: 100%;
+    height: 100%;
+  
 }
