--- a/style.css
+++ b/style.css
@@ -27,156 +27,17 @@
     grid-row:7/10; 
 }
 
-
+.setName {
+    display: inline-block; vertical-align: middle;
+    color: rgb(60, 0, 170);
+    font-weight: 1000;
+}
 
 /* 3. 옵션칸 */
 
-
 .box3 {
-    /* display: none; */
-    background: #eee;
+ 
 }
-
-
-
-
-/* 4.Price 전체  칸  */
-
-/* price 칸안에 화면에 보여지는 text 와  사용자로부터 받을 text CSS가 존재한다. */
-
-.box4 {
-    border: 4px dashed rgb(255, 165, 2);
-        
-    grid-row:1/7;
-
-    grid-template-columns: 2fr 1fr 1fr;   
-
-    grid-gap: 1em;
-    font-family: 'Gugi', cursive;
-    overflow-y: auto; 
-    
-  /* 스크롤 기능을 추가하기 위한 준비  */
-  /*  grid 먹이고 overflow-y 로 세팅 */
-    display : grid;
-    overflow-y: auto;
-
-}
-
-
-/* 화면에 보여지는 text */
-
-
-/* 주문내역 */
-#orderList1 {
-    font-size: 12;
-  
-    /*  스크롤 기능  */
-    overflow-y: scroll; 
-    
-    
-}
-/* 수량 */
-#orderList2 {
-      /*  스크롤 기능  */
-    overflow-y: scroll;
-  
-}
-
-/* 가격 */
-
-#orderList3 {
-      /*  스크롤 기능  */
-    overflow-y: scroll;
-    
-}
-
-/* 총가격 */
-#orderList4 {
-   
-}
-
-
-/* 버튼 */
-.xBtn {
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffc477), color-stop(1, #fb9e25));
-    cursor: pointer;
-    font-family: Arial;
-    font-weight: bold;
-    padding: 20px 24px;
-    text-decoration: none;
-    text-shadow: 0px 1px 0px #cc9f52;
-    font-size: 30px;
-    padding-left: 26px;
-
-
-}
-
-/* 화면에 보여지는 총가격 text Css */
-.textTotal {
-    padding-left: 32px;
-}
-
-/* 화면에 보여지는 총가격 Number */
-.totalPrice {
-    padding-left: 21px;
-    margin: 9px;
-
-}
-/* /각각 화면에 보여지는 주문내역 수량 가격의 클래스는 priceStyle / */
-.priceStyle {
-    height: 321px;
-    max-height: 400px;
-    overflow: hidden;
-    
-}
-
-
-/* 버튼을 클릭후 나오는  text */
-
-
-/* 1.price 사용자로부터 주문내역 수량 가격 총가격 CSS*/
-
-.orderMain {
-    color:  rgb(255, 165, 2);
-    padding-top: 20px;
-}
-
-/* 2.price-수량-Text-input  */
-
-.orderCount {
-    
-    color:  rgb(255, 165, 2);
-    padding-top: 20px;
-}
-
-/* 3.price-가격-Text-input */
-
-.orderPrice {
-    color:  rgb(255, 165, 2);
-    padding-top: 20px;
-   
-}
-
-/* 4.price-총가격-Text-input */
-
-.totalPrice{
-    color:  rgb(255, 165, 2);
-   
-}
-
-
-/* 5. Price-총가격-Text-input  */
-.orderList4 {
-    
-    
-}
-
-
-
-
-
-
-
 
 /* 5. 계산기 칸  */
 .box5 {
@@ -184,49 +45,6 @@
     /* 4 ==>> 위에 길이 조정 14==>밑에 길이 조정 */
     grid-row:7/10;    
 }
-
-
-
-
-
-
-
-
-
-
-
-
-.setName {
-    display: inline-block; vertical-align: middle;
-    color: rgb(60, 0, 170);
-    font-weight: 1000;
-}
-
-
-
-
-
-
-
-.xBtn {
-
-    grid-column: 1;
-    
-
-}
-
-
-
-
-
-.priceStyle {
-
-    background: #eee;
-}
-
-
-
-
 
 
 /* 계산기 */
@@ -274,7 +92,7 @@
 
 /* Cash 눌렀을 때 */
 .cashClicked {
-    background: #eee;
+    /* background: #eee; */
     display: block;
     position:absolute;
     left: 10%;
@@ -351,7 +169,6 @@
 }
 
 
-
 /* 버튼들 */
 
 #receiptBtn {
@@ -387,17 +204,23 @@
     position:absolute;
     left:15%;
     top: 30%;
-
     
 }
 
 .cardName {
-    border-style: dotted;
-    background-color: #bdc3c7;   
+    border: dotted 5px;
+    background-color: #ff000046;   
     color: red;  
     text-align: center;
     font-size: 100px;
     width: 100%;
     height: 100%;
-  
+    border-radius: 15%;
+}
+
+
+/* orderCount GRID */
+
+#temList2 {
+
 }
