--- a/menu.css
+++ b/menu.css
@@ -75,7 +75,7 @@ list-style: none;
     box-shadow: 3px 1px 1px rgb(168, 168, 168);
 }
 
-.menuBtn{
+.menuBtn {
     font-family: 'Gugi', cursive;
     border:2.5px solid #009432;
     float:left;
@@ -93,6 +93,38 @@ list-style: none;
   }
 
 .menuBtn:hover {
+    color:#009432;
+    left:0;top:0;
+    background-color: rgb(255, 165, 2);
+    font-family: 'Gugi', cursive;    
+    font-size: 30px;
+    color: #f5f6fa;
+}
+
+.menuBtnDessert {
+    height: 100px;
+    width: 100%;
+    box-shadow: 3px 1px 1px rgb(168, 168, 168);
+}
+
+.menuBtnDessert {
+    font-family: 'Gugi', cursive;
+    border:2.5px solid #009432;
+    float:left;
+    text-align:center;
+    cursor:pointer;
+    position:relative;
+    box-sizing:border-box;
+    overflow:hidden;
+    margin: 3% 3% 1% 1%;
+    transition: all .5s ease;
+    
+    font-weight: bolder;
+    color: #009432;
+    font-size: 20px;
+  }
+
+.menuBtnDessert:hover {
     color:#009432;
     left:0;top:0;
     background-color: rgb(255, 165, 2);
